Fix JS and HTML part 2

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 <!--Push 2-->
