Added back needed buttons

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         </div>
     </header>
 
+    <!-- Simple Admin Button -->
+    <button onclick="toggleAdmin()" class="admin-toggle-btn">Admin Panel</button>
+
 <div id="adminPanel" class="admin-panel" style="display: none;">
     <div class="admin-panel-content">
         <h3>Add New Project</h3>
