--- a/index.html
+++ b/index.html
@@ -123,7 +123,17 @@
                 </div>
             </div>
         </div>
+
+        <!-- Sticky Add Button -->
+        <button onclick="addCard()" class="btn btn-primary" style="width: 100%; position: sticky; bottom: 0; margin-top: 2rem;">
+            <i class="fas fa-plus"></i> Add Project
+        </button>
     </div>
+</div>
+
+    <button onclick="addCard()" class="btn btn-primary" style="width: 100%;">
+        <i class="fas fa-plus"></i> Add Project
+    </button>
 </div>
 
     <!-- Main Content -->
