--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         </div>
     </header>
 
+    <!-- Simple Admin Button -->
+    <button onclick="toggleAdmin()" class="admin-toggle-btn">Admin Panel</button>
+
 <div id="adminPanel" class="admin-panel" style="display: none;">
     <div class="admin-panel-content">
         <h3>Add New Project</h3>
@@ -126,11 +129,6 @@
             <i class="fas fa-plus"></i> Add Project
         </button>
     </div>
-</div>
-
-    <button onclick="addCard()" class="btn btn-primary" style="width: 100%;">
-        <i class="fas fa-plus"></i> Add Project
-    </button>
 </div>
 
     <!-- Main Content -->
