--- a/index.html
+++ b/index.html
@@ -64,6 +64,22 @@
         </div>
 
         <div class="form-group">
+    <label for="cardImage">Project Image (Optional):</label>
+    <div class="image-upload-container">
+        <input type="file" id="cardImage" accept="image/*" class="image-upload-input">
+        <div class="image-preview" id="imagePreview">
+            <div class="image-preview-placeholder">
+                <i class="fas fa-image"></i>
+                <span>No image selected</span>
+            </div>
+        </div>
+        <button type="button" id="removeImage" class="btn btn-secondary" style="display: none;">
+            <i class="fas fa-trash"></i> Remove Image
+        </button>
+    </div>
+</div>
+
+        <div class="form-group">
             <label for="cardUrl">Project URL (optional):</label>
             <input type="url" id="cardUrl" placeholder="https://example.com" class="form-input">
         </div>
