--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 <!-- Single projects container -->
 <div class="projects-content">
     <div id="projects-container" class="projects-grid">
-        <!-- All projects will load here --><
+        <!-- All projects will load here -->
     </div>
 </div>
 >
