removed extra symbols

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charsection id="projects" class="section">et="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Innovation Earth Projects - Exploring New Horizons</title>
     <meta name="description" content="Join Innovation Earth Projects in creating innovative solutions through hands-on projects and collaborative learning.">
@@ -403,7 +403,7 @@
         <!-- All projects will load here -->
     </div>
 </div>
->
+
             <!-- Planning Stage Tab -->
             <div id="planning" class="project-category" role="tabpanel" style="display: none;">
                 <div class="category-header">
