--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charsection id="projects" class="section">et="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Innovation Earth Projects - Exploring New Horizons</title>
     <meta name="description" content="Join Innovation Earth Projects in creating innovative solutions through hands-on projects and collaborative learning.">
@@ -14,6 +14,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
 </head>
+
 <body>
 
     <!-- Header Section -->
@@ -394,13 +395,10 @@
             <h2>Our Projects</h2>
             <p>Explore our innovation pipeline from concept to completion</p>
         </div>
->
 
-        <!-- Single projects container -->
-        <div class="projects-content">
-            <div id="projects-container" class="projects-grid">
-                <!-- All projects will load here -->
-            </div>
+        <!-- Projects will load here -->
+        <div id="projects-container" class="projects-grid">
+            <!-- Projects will be dynamically loaded here by JavaScript -->
         </div>
     </div>
 </section>
