--- a/index.html
+++ b/index.html
@@ -106,13 +106,6 @@
                         <p>Explore our first project concepts and share your own ideas</p>
                         <a href="#projects" class="btn btn-secondary" onclick="event.stopPropagation(); showSection('#projects')">Explore</a>
                     </article>
-                    
-                    <article class="quick-link-card" onclick="showSection('#projects')" style="cursor: pointer;">
-                        <i class="fas fa-lightbulb" aria-hidden="true"></i>
-                        <h3>Project Ideas Page</h3>
-                        <p>Browse and contribute to our growing list of project concepts</p>
-                        <a href="#projects" class="btn btn-secondary" onclick="event.stopPropagation(); showSection('#projects')">View Projects</a>
-                    </article>
 
                     <article class="quick-link-card" onclick="showSection('#competitions')" style="cursor: pointer;">
                         <i class="fas fa-trophy" aria-hidden="true"></i>
@@ -120,12 +113,19 @@
                         <p>Resources for FBLA, DECA, HOSA, SkillsUSA and more</p>
                         <a href="#competitions" class="btn btn-secondary" onclick="event.stopPropagation(); showSection('#competitions')">Explore Resources</a>
                     </article>
-                    
+
                     <article class="quick-link-card" onclick="showSection('#about')" style="cursor: pointer;">
                         <i class="fas fa-info-circle" aria-hidden="true"></i>
                         <h3>Our Mission</h3>
                         <p>Learn about what drives us and our vision</p>
                         <a href="#about" class="btn btn-secondary" onclick="event.stopPropagation(); showSection('#about')">Learn More</a>
+                    </article>
+
+                    <article class="quick-link-card" onclick="showSection('#contact')" style="cursor: pointer;">
+                        <i class="fas fa-lightbulb" aria-hidden="true"></i>
+                        <h3>Message us here</h3>
+                        <p>Send feedback and ideas for new projects</p>
+                        <a href="#contact" class="btn btn-secondary" onclick="event.stopPropagation(); showSection('#projects')">View Projects</a>
                     </article>
                 </div>
             </div>
