Fixed leftout links

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <i class="fas fa-lightbulb" aria-hidden="true"></i>
                         <h3>Message us here</h3>
                         <p>Send feedback and ideas for new projects</p>
-                        <a href="#contact" class="btn btn-secondary" onclick="event.stopPropagation(); showSection('#projects')">View Projects</a>
+                        <a href="#contact" class="btn btn-secondary" onclick="event.stopPropagation(); showSection('#contact')">Contact Us</a>
                     </article>
                 </div>
             </div>
