--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             <div class="header-content">
                 <!-- Logo -->
                 <div class="logo">
-                    <i class="fas fa-plane" aria-hidden="true"></i>
+                    <img src="https://i.imgur.com/YOUR_LOGO_ID.png" 
+                    alt="Innovation Earth Projects Logo" 
+                    class="logo-image"
+                    width="40" height="40">
                     <h1>Innovation <span>Earth</span> Projects</h1>
                 </div>
                 
