--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="header-content">
                 <!-- Logo -->
                 <div class="logo">
-                    <img src="https://i.imgur.com/YOUR_LOGO_ID.png" 
+                    <img src="https://github.com/ykminmin8654/Innovation-Earth-Projects-Website/blob/d101a83600d6efe548df77574a2f78f4b6e0f106/images/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-11-09%20175652.png" 
                     alt="Innovation Earth Projects Logo" 
                     class="logo-image"
                     width="40" height="40">
