Added extra formating areas

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     <!-- Your Custom Scripts -->
     <script src="firebase-config.js" defer></script>
     <script src="script.js" defer></script>
+
+    <!-- In index.html, add this line -->
+    <link rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous" 
+      referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
