--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="header-content">
                 <!-- Logo -->
                 <div class="logo">
-                    <img src="https://github.com/ykminmin8654/Innovation-Earth-Projects-Website/blob/d101a83600d6efe548df77574a2f78f4b6e0f106/images/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202025-11-09%20175652.png" 
+                    <img src="https://github.com/ykminmin8654/Innovation-Earth-Projects-Website/blob/58854d8297d7361f60a48eccb81eabcb58c0b4c9/images/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE_2025-11-09_175652-removebg-preview.png" 
                     alt="Innovation Earth Projects Logo" 
                     class="logo-image"
                     width="40" height="40">
