--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <ul class="nav-list" id="main-nav">
                         <li class="nav-item"><a href="/" class="nav-link active" data-section="home"><i class="fas fa-home"></i> Home</a></li>
                         <li class="nav-item"><a href="/projects" class="nav-link" data-section="projects"><i class="fas fa-project-diagram"></i> Projects</a></li>
-                        <li class="nav-item"><a href="/competitions" class="nav-link" data-section="Resources"><i class="fas fa-trophy"></i> Resources</a></li>
+                        <li class="nav-item"><a href="/competitions" class="nav-link" data-section="Resources"><i class="fas fa-trophy"></i> competitions</a></li>
                         <li class="nav-item"><a href="/join" class="nav-link" data-section="join"><i class="fas fa-users"></i> Join Us</a></li>
                         <li class="nav-item"><a href="/about" class="nav-link" data-section="about"><i class="fas fa-info-circle"></i> About</a></li>
                         <li class="nav-item"><a href="/contact" class="nav-link" data-section="contact"><i class="fas fa-envelope"></i> Contact</a></li>
